--- a/views/index.jade
+++ b/views/index.jade
@@ -24,4 +24,6 @@ html
     canvas(id='c', width='640', height='640')
     script(src='fbnetworking.js')
     script(src='fbcardclasses.js')
-    script(src='fbeuchre.js')   
+    script(src='fbeuchre.js')
+    div(id='fb-root')
+    script(src='fbload.js')
